--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School Timetable Countdown</title>
+    <title>M6 Timetable Countdown</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Bish M6 Timetable Countdown</h1>
     <div class="countdown-container">
-        <div class="timer" id="timer1"> Get Ready for First Class 8:00 AM - 8:40 AM: <span class="time" id="time1"></span></div>
+        <div class="timer" id="timer1"> Get Ready for Class 1 8:00 AM - 8:40 AM: <span class="time" id="time1"></span></div>
         <div class="timer" id="timer2">8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
         <div class="timer" id="timer3">9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
         <div class="timer" id="timer4">10:36 AM - 10:51 AM: <span class="time" id="time4"></span></div>
