--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Bish M6 Timetable Countdown</h1>
     <div class="countdown-container">
         <div class="timer" id="timer1"> Get Ready for Class 1 8:00 AM - 8:40 AM: <span class="time" id="time1"></span></div>
-        <div class="timer" id="timer2">8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
-        <div class="timer" id="timer3">9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
-        <div class="timer" id="timer4">10:36 AM - 10:51 AM: <span class="time" id="time4"></span></div>
-        <div class="timer" id="timer5">10:51 AM - 11:49 AM: <span class="time" id="time5"></span></div>
-        <div class="timer" id="timer6">11:49 AM - 12:47 PM: <span class="time" id="time6"></span></div>
-        <div class="timer" id="timer7">12:47 PM - 1:47 PM: <span class="time" id="time7"></span></div>
-        <div class="timer" id="timer8">1:47 PM - 2:45 PM: <span class="time" id="time8"></span></div>
-        <div class="timer" id="timer9">2:45 PM - 3:43 PM: <span class="time" id="time9"></span></div>
+        <div class="timer" id="timer2"> Class 1 8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
+        <div class="timer" id="timer3"> Class 2 9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
+        <div class="timer" id="timer4"> Small Break 10:36 AM - 10:51 AM: <span class="time" id="time4"></span></div>
+        <div class="timer" id="timer5"> Class 3 10:51 AM - 11:49 AM: <span class="time" id="time5"></span></div>
+        <div class="timer" id="timer6"> Class 4 11:49 AM - 12:47 PM: <span class="time" id="time6"></span></div>
+        <div class="timer" id="timer7"> Big Lunch 12:47 PM - 1:47 PM: <span class="time" id="time7"></span></div>
+        <div class="timer" id="timer8"> Class 5 1:47 PM - 2:45 PM: <span class="time" id="time8"></span></div>
+        <div class="timer" id="timer9"> Class 6 2:45 PM - 3:43 PM: <span class="time" id="time9"></span></div>
     </div>
     <script src="script.js"></script>
 </body>
