--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Bish M6 Timetable Countdown</h1>
     <div class="countdown-container">
-        <div class="timer" id="timer1"> <span text-decoration: underline; class="title">Get Ready for Class 1</span> 1 8:00 AM - 8:40 AM: <span class="time" id="time1"></span></div>
-        <div class="timer" id="timer2"> Class 1 8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
-        <div class="timer" id="timer3"> Class 2 9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
+        <div class="timer" id="timer1"> <span class="title">Get Ready for Class 1</span> 1 8:00 AM - 8:40 AM: <span class="time" id="time1"></span></div>
+        <div class="timer" id="timer2"> <span class="title">Class 1 </span> 8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
+        <div class="timer" id="timer3"> <span class="title">Class 2 </span> 9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
         <div class="timer" id="timer4"> Small Break 10:36 AM - 10:51 AM: <span class="time" id="time4"></span></div>
         <div class="timer" id="timer5"> Class 3 10:51 AM - 11:49 AM: <span class="time" id="time5"></span></div>
         <div class="timer" id="timer6"> Class 4 11:49 AM - 12:47 PM: <span class="time" id="time6"></span></div>
