--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bish M6 Timetable Countdown</h1>
     <div class="countdown-container">
-        <div class="timer" id="timer1"> Get Ready for Class 1 : <span class="time" id="time1"></span></div>
+        <div class="timer" id="timer1"> Get Ready for Class 1. Check Timetable. Get Your Books. : <span class="time" id="time1"></span></div>
         <div class="timer" id="timer2"> Class 1  8:40 AM - 9:38 AM: <span class="time" id="time2"></span></div>
         <div class="timer" id="timer3"> Class 2 9:38 AM - 10:36 AM: <span class="time" id="time3"></span></div>
         <div class="timer" id="timer4"> Small Break 10:36 AM - 10:51 AM: <span class="time" id="time4"></span></div>
