--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="timer" id="timer4"> Small Break <span class="time" id="time4"></span></div>
         <div class="timer" id="timer5"> Class 3 <span class="time" id="time5"></span></div>
         <div class="timer" id="timer6"> Class 4 <span class="time" id="time6"></span></div>
-        <div class="timer" id="timer7"> Big Lunch <span class="time" id="time7"></span></div>
+        <div class="timer" id="timer7"> Lunch <span class="time" id="time7"></span></div>
         <div class="timer" id="timer8"> Class 5 <span class="time" id="time8"></span></div>
         <div class="timer" id="timer9"> Class 6 <span class="time" id="time9"></span></div>
     </div>
