--- a/index.html
+++ b/index.html
@@ -9,16 +9,53 @@
 <body>
     <h1>Bish M6 Timetable Countdown</h1>
     <div class="countdown-container">
-        <div class="timer" id="timer1"> Get Ready for Class 1 <span class="time" id="time1"></span></div>
-        <div class="timer" id="timer2"> Class 1 <span class="time" id="time2"></span></div>
-        <div class="timer" id="timer3"> Class 2 <span class="time" id="time3"></span></div>
-        <div class="timer" id="timer4"> Small Break <span class="time" id="time4"></span></div>
-        <div class="timer" id="timer5"> Class 3 <span class="time" id="time5"></span></div>
-        <div class="timer" id="timer6"> Class 4 <span class="time" id="time6"></span></div>
-        <div class="timer" id="timer7"> Lunch <span class="time" id="time7"></span></div>
-        <div class="timer" id="timer8"> Class 5 <span class="time" id="time8"></span></div>
-        <div class="timer" id="timer9"> Class 6 <span class="time" id="time9"></span></div>
+        <div class="timer" id="timer1">
+            Get Ready for Class 1
+            <span class="time" id="time1">40:00</span>
+            <canvas class="circle-timer" id="circle1" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer2">
+            Class 1
+            <span class="time" id="time2">58:00</span>
+            <canvas class="circle-timer" id="circle2" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer3">
+            Class 2
+            <span class="time" id="time3">58:00</span>
+            <canvas class="circle-timer" id="circle3" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer4">
+            Small Break
+            <span class="time" id="time4">15:00</span>
+            <canvas class="circle-timer" id="circle4" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer5">
+            Class 3
+            <span class="time" id="time5">58:00</span>
+            <canvas class="circle-timer" id="circle5" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer6">
+            Class 4
+            <span class="time" id="time6">58:00</span>
+            <canvas class="circle-timer" id="circle6" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer7">
+            Lunch
+            <span class="time" id="time7">60:00</span>
+            <canvas class="circle-timer" id="circle7" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer8">
+            Class 5
+            <span class="time" id="time8">58:00</span>
+            <canvas class="circle-timer" id="circle8" width="100" height="100"></canvas>
+        </div>
+        <div class="timer" id="timer9">
+            Class 6
+            <span class="time" id="time9">58:00</span>
+            <canvas class="circle-timer" id="circle9" width="100" height="100"></canvas>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
