--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M6 Timetable Countdown</title>
+    <meta http-equiv="refresh" content="20">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
